# mnl-social-publisher

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: mnl-social-publisher-ci.yml  mnl-social-publisher-remote-ops.yml  mnl-social-publisher-web-image.yml
deploy/: com.moneynlaw.social-publisher.plist.template  com.moneynlaw.social-publisher.python.plist.template  docker-compose.yml  mnl-social-publisher.env.example
docs/: MAC_DOCKER_DEPLOYMENT.md  MAC_PYTHON_SERVICE_DEPLOYMENT.md  REMOTE_WEB_UI.md  package-contract.md
scripts/: install_mac_launch_agent.sh  install_mac_python_launch_agent.sh  mac_enable_tailscale_serve.sh  mac_python_bootstrap.sh  mac_python_service_run.sh  mac_stack_down.sh  mac_stack_logs.sh  mac_stack_resume.sh  mac_stack_up.sh  uninstall_mac_launch_agent.sh  uninstall_mac_python_launch_agent.sh
src/mnl_social_publisher/: __init__.py  approval_inputs.py  approval_loader.py  approval_stores.py  cli.py  generation_profiles.py  models.py  notifiers.py  onedrive.py  package_loader.py  platforms.py  prompt_templates.py  review_artifacts.py  review_builds.py  settings.py  social_status.py  web_app.py  workspace.py  wsgi.py
src/mnl_social_publisher/builders/: __init__.py  common.py  facebook.py  instagram.py  registry.py  threads.py  x.py  (+1 more)
tests/: test_approval_inputs.py  test_cli_entrypoints.py  test_generation_profiles.py  test_notifiers.py  test_onedrive_config.py  test_package_loader.py  test_platform_publishers.py  test_remote_workspace.py  test_web_app.py  test_workspace_cli.py  test_youtube_builder.py
(+30 files in other folders)
