[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnl-social-publisher"
version = "0.1.0"
description = "Platform-specific builders and publishers for Money & Law social packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["gunicorn>=23,<24"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mnl-social-publisher = "mnl_social_publisher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"mnl_social_publisher" = ["prompts/**/*.txt", "profiles/**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
